@@ -66,6 +66,8 @@ OVN v25.09.0 - xxx xx xxxx
    - ovn-sbctl:
      * Added --filter option that allows filtering the command output. See
        ovn-sbctl(8) for more details.
+   - Added disable_garp_rarp option to logical_router table in order to disable
+     GARP/RARP announcements by all the peer ports of this logical router.
 
 OVN v25.03.0 - 07 Mar 2025
 --------------------------
